--- a/Stylesheet.css
+++ b/Stylesheet.css
@@ -3,7 +3,7 @@ body{
     margin: auto;
     font-family: -apple-system, BlinkMacSystemFont, sans-serif;
     overflow: auto;
-    background: linear-gradient(315deg, rgba(101,0,94,1) 3%, rgba(60,132,206,1) 38%, rgba(48,238,226,1) 68%, rgba(255,25,25,1) 98%);
+    background: linear-gradient(315deg, rgb(189, 42, 179) 3%, rgb(75, 129, 184) 38%, rgb(102, 231, 223) 68%, rgb(243, 60, 60) 98%);
     animation: gradient 15s ease infinite;
     background-size: 400% 400%;
     background-attachment: fixed;
