--- a/Stylesheet.css
+++ b/Stylesheet.css
@@ -3,10 +3,11 @@ body{
     margin: auto;
     font-family: -apple-system, BlinkMacSystemFont, sans-serif;
     overflow: auto;
-    background: linear-gradient(315deg, rgb(189, 42, 179) 3%, rgb(75, 129, 184) 38%, rgb(102, 231, 223) 68%, rgb(243, 60, 60) 98%);
-    animation: gradient 15s ease infinite;
+    background: linear-gradient(315deg, rgb(113, 194, 231) 3%, rgb(154, 194, 235) 38%, rgb(146, 219, 214) 68%, rgb(136, 197, 255) 98%);
+    animation: gradient 25s ease infinite;
     background-size: 400% 400%;
     background-attachment: fixed;
+    overflow: hidden;
 }
 
 @keyframes gradient {
@@ -27,7 +28,7 @@ body{
     position: fixed;
     width: 200%;
     height: 12em;
-    animation: wave 10s -3s linear infinite;
+    animation: wave 20s -3s linear infinite;
     transform: translate3d(0, 0, 0);
     opacity: 0.8;
     bottom: 0;
@@ -69,11 +70,45 @@ body{
     }
 }
 
+.floating { 
+    animation-name: floating;
+    animation-duration: 6s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+    margin-left: 60px;
+    background-color: rgb(247, 238, 245);
+    height: 510px;
+    width: 800px;
+    border-radius: 20px;
+}
+ 
+@keyframes floating {
+    0% { transform: translate(0,  0px); }
+    50%  { transform: translate(0, 5px); }
+    100%   { transform: translate(0, -1px); }   
+}
+
+.welcome{
+    padding-left: 50px;
+    padding-top: 40px;
+    font-family: sans-serif;
+    font-weight: bolder;
+    font-size: 40px;
+}
+
+.subtext{
+    padding-left: 50px;
+    padding-top: 0px;
+    font-family: sans-serif;
+    font-weight: bold;
+    font-size: 20px;
+}
+
 ul {
     list-style-type: none;
     margin: 0;
     padding-right:0;
-    padding-top: 20px;
+    padding-top: 15px;
     overflow: hidden;
     background-color:none;
     position: sticky;
@@ -94,5 +129,5 @@ ul {
   }
 
   li a:hover{
-    color: blanchedalmond;
+    color: rgb(255, 255, 255);
   }
