--- a/Stylesheet.css
+++ b/Stylesheet.css
@@ -3,7 +3,7 @@ body{
     margin: auto;
     font-family: -apple-system, BlinkMacSystemFont, sans-serif;
     overflow: auto;
-    background: linear-gradient(315deg, rgb(255, 254, 255) 3%, rgb(176, 216, 255) 38%, rgb(169, 241, 243) 68%, rgb(111, 179, 243) 98%);
+    background: linear-gradient(315deg, rgb(174, 255, 248) 3%, rgb(176, 216, 255) 38%, rgb(113, 239, 243) 68%, rgb(55, 150, 240) 98%);
     animation: gradient 25s ease infinite;
     background-size: 400% 400%;
     background-attachment: fixed;
@@ -76,24 +76,20 @@ body{
     animation-iteration-count: infinite;
     animation-timing-function: ease-in-out;
     margin-left: 60px;
-    background-image: linear-gradient(-20deg, #f2f3f3 0%, #b1f8ed 100%);
-   /* background-color: rgb(247, 238, 245);*/
+    /*background-image: linear-gradient(-20deg, #4ECDC4 0%, #FFE1A8 100%);*/
+    /*background-color: 4ECDC4;*/
     height: 510px;
-    width: 770px;
+    width: 700px;
     border-radius: 20px;
     box-shadow: 50px;
 }
 
 .start{
+    padding-top: 30px;
     animation-name: floating;
     animation-duration: 6s;
     animation-iteration-count: infinite;
     animation-timing-function: ease-in-out;
-    height: 510px;
-    width: 450px;
-    background-image: linear-gradient(-20deg, #f2f3f3 0%, #b1f8ed 100%);
-    /*background-color: rgb(247, 238, 245);*/
-    border-radius: 20px;
     overflow: hidden;
 }
 
@@ -105,7 +101,7 @@ body{
   .floating, .start {
     float: left; 
     box-sizing:border-box;
-    margin-right: 30px;
+    margin-right: 40px;
 }
 
 .Startsub{
@@ -131,7 +127,7 @@ body{
   }
       
   @keyframes blink {
-    50% {
+    0% {
       border-color: transparent
     }
   }
@@ -149,7 +145,7 @@ body{
     100%   { transform: translate(0, -1px); }   
 }
 .welcome{
-    padding-left: 50px;
+    padding-left: 30px;
     padding-top: 20px;
     font-family: serif;
     font-weight: bolder;
@@ -157,14 +153,15 @@ body{
 }
 
 .signup{
-    background-color: rgb(57, 69, 238);
+    background-color: rgb(62, 216, 243);
     border: none;
     color: rgb(255, 255, 255);
-    padding: 15px 25px;
+    padding: 17px 25px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 15px;
+    font-weight: bold;
     margin-left: 30px;
     border-radius: 15px;
     transition: 0.3s;
@@ -175,15 +172,16 @@ body{
 }
 
 .subtext{
-    padding-left: 50px;
+    padding-left: 30px;
     padding-top: 0px;
     font-family: serif;
     font-weight: bold;
     font-size: 22px;
+    text-align: justify;
 }
 
 .sub{
-    padding-left: 50px;
+    padding-left: 30px;
     padding-top: 0px;
     font-family: serif;
     font-weight: bold;
