--- a/Stylesheet.css
+++ b/Stylesheet.css
@@ -3,7 +3,7 @@ body{
     margin: auto;
     font-family: -apple-system, BlinkMacSystemFont, sans-serif;
     overflow: auto;
-    background: linear-gradient(315deg, rgb(174, 255, 248) 3%, rgb(176, 216, 255) 38%, rgb(113, 239, 243) 68%, rgb(55, 150, 240) 98%);
+    background: linear-gradient(315deg, rgb(158, 252, 244) 3%, rgb(144, 200, 255) 38%, rgb(104, 245, 250) 68%, rgb(45, 151, 250) 98%);
     animation: gradient 25s ease infinite;
     background-size: 400% 400%;
     background-attachment: fixed;
@@ -23,7 +23,7 @@ body{
 }
 
 .wave {
-    background: rgb(255 255 255 / 25%);
+    background: rgba(255, 255, 255, 0.25);
     border-radius: 1000% 1000% 0 0;
     position: fixed;
     width: 200%;
@@ -220,3 +220,35 @@ ul {
   li a:hover{
     color: rgb(255, 255, 255);
   }
+
+  /* Styling for HUB Page*/
+
+  .container {
+    overflow: hidden; 
+    padding-top: 20px;
+  }
+  
+  .firm, .profile {
+    float: left; 
+    box-sizing:border-box;
+    margin-right: 30px;
+}
+
+.firm{
+    background-image: linear-gradient(-20deg, #4ECDC4 0%, #FFE1A8 100%);
+    height: 500px;
+    width:900px;
+    margin-left: 55px;
+    margin-top: 25px;
+    border-radius: 15px;
+    opacity: 0.6;
+}
+
+.profile{
+    background-image: linear-gradient(-20deg, #4ECDC4 0%, #FFE1A8 100%);
+    height: 500px;
+    width: 325px;
+    margin-top:25px;
+    opacity: 0.6;
+    border-radius: 15px;
+}
