--- a/Stylesheet/Stylesheet.css
+++ b/Stylesheet/Stylesheet.css
@@ -221,6 +221,28 @@ ul {
     color: rgb(255, 255, 255);
   }
 
+  .Profileicon{
+    height: 75px;
+    width: 75px;
+    margin-left: 10px;
+  }
+
+  .Profileicon:hover{
+    transform: scale(1.1);
+  }
+
+  .listcontainer {
+    overflow: hidden;
+    margin-left: 20px;
+    margin-top: 10px; 
+  }
+  
+  .nav, .icon {
+    float: left; 
+    box-sizing:border-box;
+    margin-right: 200px;
+}
+
   /* Styling for HUB Page*/
 
   .container {
