--- a/Stylesheet/Stylesheet.css
+++ b/Stylesheet/Stylesheet.css
@@ -202,10 +202,11 @@ ul {
     padding-right:0;
     padding-top: 15px;
     overflow: hidden;
+    font-size: large;
     background-color:none;
     position: sticky;
     top: 0;
-    font-weight: bold;
+    font-weight: bolder;
   }
   
   li {
@@ -214,7 +215,7 @@ ul {
   
   li a {
     display: block;
-    color: rgb(29, 29, 29);
+    color: rgb(56, 56, 56);
     text-align: center;
     padding: 11px 50px;
     text-decoration: none;
@@ -244,7 +245,7 @@ ul {
   .nav, .icon {
     float: left; 
     box-sizing:border-box;
-    margin-right: 200px;
+    margin-right: 180px;
 }
 
   /* Styling for HUB Page*/
