--- a/Stylesheet/Stylesheet2.css
+++ b/Stylesheet/Stylesheet2.css
@@ -338,6 +338,45 @@ ul {
     text-align: justify;
     padding-right: 40px;
     color: #393a3a;
-    font-style: italic;
-    font-family: serif;
+    font-family:'Times New Roman', Times, serif
+}
+
+.Profit{
+    height: 200px;
+    width: 300px;
+    border-radius: 10px;
+    margin-left: 110px;
+    margin-top: 30px;
+    box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.3); 
+    opacity: 0.6;
+}
+
+.Profit:hover{
+    transform: scale(1.02);
+    opacity: 1;
+}
+
+.analytics{
+    overflow: hidden;
+}
+
+.Profit, .marketcap {
+    float: left; 
+    box-sizing:border-box;
+    margin-right: 70px;
+}
+
+.marketcap{
+    height: 200px;
+    width: 300px;
+    border-radius: 10px;
+    margin-left: 30px;
+    margin-top: 30px;
+    box-shadow: 3px 3px 6px rgba(87, 87, 87, 0.3); 
+    opacity: 0.6;
+}
+
+.marketcap:hover{
+    transform: scale(1.02);
+    opacity: 1;
 }
